added more cties towns and villages nationwide Canada, sleep tracker, 311 Connect, calming station, donation v2.0.0.0